fixed site logo alignment in MS Edge

--- a/style.css
+++ b/style.css
@@ -702,10 +702,6 @@ textarea {
 	color: #ff5555;
 }
 
-.site-branding .custom-logo-link {
-	display: block;
-}
-
 .site-branding .custom-logo {
 	margin: 0 1em 0 0;
 	padding: 0;
